# clippster-mono

./: .gitignore  .prettierignore  AUDIO_CONTROLS_IMPLEMENTATION_PLAN__DND.md  AUTH_FIX_SUMMARY.md  AUTH_REFACTOR__DND.md  CLAUDE.md  CLIPPING.md  CUsersNo  FFMPEG_PERFORMANCE_IMPROVEMENTS_PLAN__DND.md  FOCAL_POINTS_IMPLEMENTATION.md  GOOGLE_OAUTH_IMPLEMENTATION_PLAN__DND.md  IMPLEMENTATION_SUMMARY.md  LONG_VIDEO_SUPPORT_PLAN.md  MEDIA_PANEL_UX_IMPROVEMENTS.md  PRICING.md  PROJECT_SUMMARY__DND.md  PUMPFUN_REALTIME_CLIP_DETECTION_PLAN__DND.md  PUMP_FUN_LIVESTREAM_API__DND.md  README.md  SECURITY_FIXES.md  SPEAKER_FOCAL.md  STORAGE.md  WALLET_AUTH_IMPLEMENTATION.md  WALLET_AUTH_QUICKSTART.md  WALLET_AUTH_SETUP.md  package.json
client/src-tauri/: Cargo.toml  FFMPEG_SETUP.md  build.rs  download-ffmpeg.ps1  download-ffmpeg.sh  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/fonts/: README.md
client/src-tauri/icons/: icon.icns
client/src-tauri/migrations/: 001_initial_schema.sql  002_add_raw_video_path.sql  003_add_raw_videos_table.sql  004_transcripts_reference_raw_videos.sql  005_make_project_id_nullable.sql  006_add_original_filename.sql  007_add_thumbnail_path.sql  008_remove_raw_video_path_field.sql  009_add_audio_files_table.sql  010_add_clip_versioning.sql  010_add_clip_versioning_fixed.sql  011_fix_cascade_deletion_simple.sql  011_remove_project_cascade_deletion.sql  011_remove_project_cascade_deletion_fixed.sql  012_add_original_project_field.sql  013_add_project_thumbnail.sql  014_add_clip_segments.sql  015_add_clip_status.sql  (+18 more)
(+324 files in other folders)
