[package]
name = "clippster-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clippster_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }
ureq = { version = "2", default-features = false, features = ["tls"] }
zip = "0.6"
tar = "0.4"
xz2 = "0.1"

[dependencies]
tauri = { version = "2.3.0", features = ["protocol-asset", "native-tls-vendored"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
once_cell = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dirs = "5"
urlencoding = "2"
rand = "0.8"
base64 = "0.22"

